app/assets/stylesheets/answer_index.scss
.answer-index{
  width: 720px;
  font-size: 16px;
  margin-top: 20px;
}

.answer-index > button {
  float: none;
  margin-left: 0;
}


.answer-index-item{
  border-top: 1px solid #e2e2e2;
  font-weight: 400;
  font-size: 14px;
  padding-bottom: 16px;
  margin-bottom: 25px;
}

.answer-author{
  font-weight: bold;
  padding: 16px 0;
}

.answer-count{
  margin: 5px 0;
}

.answer-form{
  border: 1px solid #e2e2e2;
  height: 150px;
  margin-bottom: 25px;
}

.answer-input{
  height: 100%;
  width: 100%;
}

.answer-form > input {
  display: block;
  margin-top: 12px;
  margin-left: 0;
  margin-bottom: 12px;
}


.answer-content{
  max-width: 650px;
  overflow-wrap: break-word;
}

.cancelAnswer{
  float:right;
  display: inline;
  font-size: 14px;
  color: grey;
  padding: 4px 7px;
  margin: 12px;
}

.cancelAnswer:hover{
  cursor: pointer;
  text-decoration: underline;;
}

